fix: wrap NLDS components inside nijmegen-theme class for use besides MDBS components

--- a/src/nlds/scss/main.scss
+++ b/src/nlds/scss/main.scss
@@ -1,2 +1,4 @@
 @use '@gemeentenijmegen/design-tokens/dist/index.css';
-@import '@utrecht/components/button/css/index';
+.nijmegen-theme {
+    @import '@utrecht/components/button/css/index';
+}
